src/objects/EventRecap__c.object
<CustomObject>
    <fields>
        <fullName>ActualGateTime__c</fullName>
        <label>Actual Gate Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualGeneralTotalAttendance__c</fullName>
        <label>Actual General Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualInSeatTotalAttendance__c</fullName>
        <label>Actual InSeat Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualLawnOnlyTotalAttendance__c</fullName>
        <label>Actual Lawn Only Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualNumberOfHawkers__c</fullName>
        <label>Actual Number Of Hawkers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualTotalAttendance__c</fullName>
        <label>Actual Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualVipTotalAttendance__c</fullName>
        <label>Actual Vip Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AlcoholCutOffTime__c</fullName>
        <label>Alcohol Cut Off Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BottlesAndCansAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottles And Cans Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashAmount2__c</fullName>
        <label>Cash Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashAmount__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditCardSalesAmount2__c</fullName>
        <label>Credit Card Sales Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditCardSalesAmount__c</fullName>
        <label>Credit Card Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventCategory__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoted</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Event Recaps</relationshipLabel>
        <relationshipName>EventRecaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRecapDocType__c</fullName>
        <label>Event Recap Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventRecapDocument__c</fullName>
        <label>Event Recap Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRecapGenreType__c</fullName>
        <label>Event Recap Genre Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventTypeName__c</fullName>
        <label>Event Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>EDM</fullName>
                </value>
                <value>
                    <fullName>Radio Show</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>Symphony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HeadlinerActStartTime__c</fullName>
        <label>Headliner Act Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfActualPointOfSales__c</fullName>
        <label>Number Of Actual Point Of Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfCreditCardTransactions__c</fullName>
        <label>Number Of Credit Card Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfIntermissionsInMinutes__c</fullName>
        <label>Number Of Intermissions In Minutes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfIntermissions__c</fullName>
        <label>Number Of Intermissions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfScheduledPointOfSales__c</fullName>
        <label>Number Of Scheduled Point Of Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpeningActStartTime__c</fullName>
        <label>Opening Act Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearPerCap__c</fullName>
        <label>Prior Year Per Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLawnOnlyTotalAttendance__c</fullName>
        <label>ProjectedLawnOnlyTotalAttendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedNumberOfHawkers__c</fullName>
        <label>Projected Number Of Hawkers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedTotalAttendance__c</fullName>
        <label>Projected Total Attendance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RampPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ramp Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesTaxRate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScheduleGateTime__c</fullName>
        <label>Schedule Gate Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SustainabilityReportComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sustainability Report Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <label>Weather</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxCashAmount2__c</fullName>
        <formula>(CashAmount2__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Cash Amount 2 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCashAmount__c</fullName>
        <formula>(CashAmount__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Cash Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCreditCardSalesAmount2__c</fullName>
        <formula>(CreditCardSalesAmount2__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Credit Card Sales Amount 2 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxCreditCardSalesAmount__c</fullName>
        <formula>(CreditCardSalesAmount__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Credit Card Sales Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPriorYearPerCap__c</fullName>
        <formula>(PriorYearPerCap__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prior Year Per Cap (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event Recap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Recaps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>